@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 2021-XX-XX  Release 7.32.4                                     ---
 ----------------------------------------------------------------------
 
+* Added -idn search filter for finding identity matrices - Cliff Yapp
 * Improve documentation for bot modes in bot and search - Cliff Yapp
 * enabled draw -h (hidden line mode) in MGED - Cliff Yapp
 * added -o output option to GED stat command - Cliff Yapp
